hphp/test/quick/function_pointer/class_const_this.php.expectf
Fatal error: Function pointers must be explicitly specified in %s/quick/function_pointer/class_const_this.php on line 9
